# stdlib

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .vale.ini  AGENTS.md  BUILD_DOCS_REVIEW.md  CONTRIBUTING.md  DOCUMENTATION_REVIEW_REPORT.md  Dockerfile  FUNCTION_ORDER_REPORT.json  FUNCTION_ORDER_REPORT.md  GLOBAL_VARIABLE_AUDIT.md  README.md  REFERENCE.md  REFERENCE_TESTING.md  REPORT.md  container.sh  documentation_audit_report.md  final_errors_v2.json  host.sh  pyproject.toml
.cicd-tools/configuration/: pre-commit-bootstrap.yaml
.github/config/actions/: github-action-markdown-link-check.json
.github/config/workflows/: workflow-push.json
.github/scripts/: job-50-test-precommit.sh  job-81-coverage-upload.sh  step-setup-environment.sh
.github/workflows/: workflow-push.yml
.vale/Vocab/stdlib/: accept.txt
docs/: conf.py  index.md  integration_guide.md
docs/conf/: __init__.py  general.py  html.py  markdown.py  myst.py  symlinks.py
docs/embeds/: container_script.md  customized_t_script.md  distribution_t_script.md
locales/: stdlib.pot  stdlib_testing.pot
locales/en/LC_MESSAGES/: stdlib.po  stdlib_testing.po
pre-commit/: filtered_pygrep.py
src/: REFERENCE_COMPLETE.md  __lib__.sh  binary.sh  builtin.sh  deferred.sh  gettext.sh  gettext.snippet  message.sh  variables.sh
src/array/: REFERENCE.md  __lib__.sh  getter.sh  make.sh  map.sh  mutate.sh
src/array/assert/: __lib__.sh  is.sh  not.sh
src/array/query/: __lib__.sh  is.sh
src/fn/: REFERENCE.md  __lib__.sh  args.sh
src/fn/assert/: __lib__.sh  is.sh  not.sh
src/io/: REFERENCE.md  __lib__.sh  lock.sh  stdin.sh
src/logger/: REFERENCE.md  __lib__.sh  logger.sh
src/security/: REFERENCE.md  __lib__.sh  getter.sh
src/setting/: REFERENCE.md  __lib__.sh  colour.sh  theme.sh
src/string/: REFERENCE.md  __lib__.sh  justify.sh  pad.sh  trim.sh  wrap.sh
src/testing/: REFERENCE.md  REFERENCE_COMPLETE.md  __lib__.sh  error.sh  gettext.sh  load.sh  message.sh  protect.sh  theme.sh  variables.sh
src/trap/: REFERENCE.md  __lib__.sh  create.sh  register.snippet  trap.sh
src/var/: REFERENCE.md  __lib__.sh
tools/: audit_functions.sh  binary_check.py  documentation_check.py  documentation_modifier_variable_check.py  function_order_check.py  modifier_variable_check.py
tools/tests/: test_binary_check.py  test_documentation_check.py  test_documentation_modifier_variable_check.py  test_function_order_check.py  test_modifier_variable_check.py
(+560 files in other folders)
