[build-system]
build-backend = 'poetry.core.masonry.api'
requires = ['poetry-core']

[tool]
[tool.commitizen]
bump_message = 'bump(RELEASE): $current_version → $new_version'
pre_bump_hooks = ['poetry run pre-commit run --hook-stage=manual commitizen-pre-bump --files pyproject.toml -c .cicd-tools/configuration/pre-commit-stdlib.__bootstrap.yaml || true']
version = '0.1.0'
version_files = ['pyproject.toml:version']
version_provider = 'poetry'

[tool.poetry]
authors = ['Niall Byrne <9848926+niall-byrne@users.noreply.github.com>']
description = 'A standard library for bash scripts.'
name = 'stdlib'
package-mode = false
readme = 'README.md'
version = '0.1.0'

[tool.poetry.dependencies]
python = '^3.10'

[tool.poetry.group]
[tool.poetry.group.dev]
[tool.poetry.group.dev.dependencies]
commitizen = '^4.11.0'
pre-commit = '^4.5.1'

[tool.ruff]
exclude = ['.git', '__pycache__']
indent-width = 4
line-length = 80

[tool.ruff.format]
quote-style = 'double'

[tool.ruff.lint]
fixable = ['ALL']
future-annotations = true
ignore = ['D105', 'D107', 'D203', 'D213']
select = ['ARG001', 'D', 'DJ', 'E', 'F', 'I', 'Q']
unfixable = []

[tool.ruff.lint.flake8-type-checking]
quote-annotations = false

[tool.ruff.lint.isort]
default-section = 'first-party'
length-sort = false
no-lines-before = ['local-folder']
section-order = ['future', 'standard-library', 'third-party', 'first-party', 'local-folder']

[tool.ruff.lint.per-file-ignores]
'*/tests/*.py' = ['D']

[tool.ruff.lint.pylint]
max-args = 6
